# PeTTaChainer

./: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  TODO.md  compose.yaml  pyproject.toml
.githooks/: README.md
migrations/: env.py
migrations/versions/: 0001_server_schema.py
pettachainer/: LANGUAGE_SPEC.md  LLM_RULE_SPEC.md  pettachainer.py
pettachainer/benchmarks/: README.md  forward_vs_backward.py
pettachainer/metta/: backward_chainer.metta  backward_proof_store.metta  chainer_utils.metta  compile.metta  compiled_query_runtime.metta  data_test.metta  dist_formulas.metta  forward_chainer.metta  logic_config.metta  m.metta  math.metta  mine.metta  mining.metta  petta_chainer.metta  profile_no_show_hook.pl  profile_petta.sh  tv_formulas.metta
pettachainer/metta/benchmarks/: benchgen_metta.metta  demo_total_implication_pattern_mining.metta
pettachainer/metta/linter/: metta_linter.metta
pettachainer/metta/logic_configs/: pln.metta  predicate_logic.metta
pettachainer/metta/tests/: test.metta  test_backward_dag_helpers.metta  test_backward_open_query_results.metta  test_benchgen_metta.metta  test_best_first_runtime.metta  test_chainer_add_atom.metta  test_distribution_values.metta  test_foldall_query_goal.metta  test_logic_config.metta  (+13 more)
pettachainer/server/: __init__.py  app.py  auth.py  config.py  database.py  main.py  models.py  policy.py  schemas.py  service.py  worker.py
scripts/: lint_metta.sh
tests/: __init__.py  test_pettachainer.py  test_server_api.py  test_server_config.py  test_server_policy.py  test_server_worker.py
(+2 files in other folders)
